src/main/java/at/jku/dke/task_app/sql/ra2sql/RelationalAlgebraSyntaxParser.java
// Generated from /Users/martin/Development/dke/etutor_neu/task-app-sql/src/main/antlr4/RelationalAlgebraSyntax.g4 by ANTLR 4.13.1

    package at.jku.dke.task_app.sql.ra2sql;

    import java.util.GregorianCalendar;
    import at.jku.dke.task_app.sql.ra2sql.model.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class RelationalAlgebraSyntaxParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, WS=26, STRING=27, NUMBER=28;
	public static final int
		RULE_root = 0, RULE_expression = 1, RULE_relation = 2, RULE_operator = 3, 
		RULE_unary = 4, RULE_selection = 5, RULE_projection = 6, RULE_renaming = 7, 
		RULE_binary = 8, RULE_join = 9, RULE_intersection = 10, RULE_union = 11, 
		RULE_outerJoin = 12, RULE_division = 13, RULE_minus = 14, RULE_cartesianProduct = 15, 
		RULE_leftSemiJoin = 16, RULE_rightSemiJoin = 17, RULE_thetaJoin = 18, 
		RULE_literal = 19, RULE_comparisonOperator = 20, RULE_date = 21, RULE_year = 22, 
		RULE_month = 23, RULE_day = 24, RULE_attribute = 25, RULE_name = 26, RULE_number = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "expression", "relation", "operator", "unary", "selection", "projection", 
			"renaming", "binary", "join", "intersection", "union", "outerJoin", "division", 
			"minus", "cartesianProduct", "leftSemiJoin", "rightSemiJoin", "thetaJoin", 
			"literal", "comparisonOperator", "date", "year", "month", "day", "attribute", 
			"name", "number"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'LEFTPARENTHESES'", "'RIGHTPARENTHESES'", "'SELECTION'", "'LEFTBRACKET'", 
			"'COMMA'", "'RIGHTBRACKET'", "'PROJECTION'", "'RENAMING'", "'LEFTARROW'", 
			"'JOIN'", "'INTERSECTION'", "'UNION'", "'OUTER_JOIN'", "'DIVISION'", 
			"'MINUS'", "'CARTESIANPRODUCT'", "'LEFTSEMI'", "'RIGHTSEMI'", "'LEFTCURLY'", 
			"'RIGHTCURLY'", "'APOSTROPHE'", "'LESSTHAN'", "'EQUAL'", "'GREATERTHAN'", 
			"'DOT'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "WS", "STRING", "NUMBER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RelationalAlgebraSyntax.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RelationalAlgebraSyntaxParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RootContext extends ParserRuleContext {
		public Expression value;
		public ExpressionContext ex;
		public TerminalNode EOF() { return getToken(RelationalAlgebraSyntaxParser.EOF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraSyntaxListener ) ((RelationalAlgebraSyntaxListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraSyntaxListener ) ((RelationalAlgebraSyntaxListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationalAlgebraSyntaxVisitor ) return ((RelationalAlgebraSyntaxVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			((RootContext)_localctx).ex = expression();
			setState(57);
			match(EOF);
			((RootContext)_localctx).value =  ((RootContext)_localctx).ex.value;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public Expression value;
		public OperatorContext e1;
		public RelationContext e2;
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public RelationContext relation() {
			return getRuleContext(RelationContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraSyntaxListener ) ((RelationalAlgebraSyntaxListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraSyntaxListener ) ((RelationalAlgebraSyntaxListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationalAlgebraSyntaxVisitor ) return ((RelationalAlgebraSyntaxVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__2:
			case T__6:
			case T__7:
				{
				setState(60);
				((ExpressionContext)_localctx).e1 = operator();
				((ExpressionContext)_localctx).value =  ((ExpressionContext)_localctx).e1.value;
				}
				break;
			case STRING:
				{
				setState(63);
				((ExpressionContext)_localctx).e2 = relation();
				((ExpressionContext)_localctx).value =  ((ExpressionContext)_localctx).e2.value;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelationContext extends ParserRuleContext {
		public Relation value;
		public NameContext name;
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public RelationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraSyntaxListener ) ((RelationalAlgebraSyntaxListener)listener).enterRelation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraSyntaxListener ) ((RelationalAlgebraSyntaxListener)listener).exitRelation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationalAlgebraSyntaxVisitor ) return ((RelationalAlgebraSyntaxVisitor<? extends T>)visitor).visitRelation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelationContext relation() throws RecognitionException {
		RelationContext _localctx = new RelationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_relation);

		        ((RelationContext)_localctx).value =  new Relation();
		    
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			((RelationContext)_localctx).name = name();
			_localctx.value.setName((((RelationContext)_localctx).name!=null?_input.getText(((RelationContext)_localctx).name.start,((RelationContext)_localctx).name.stop):null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperatorContext extends ParserRuleContext {
		public Expression value;
		public UnaryContext e1;
		public BinaryContext e2;
		public UnaryContext unary() {
			return getRuleContext(UnaryContext.class,0);
		}
		public BinaryContext binary() {
			return getRuleContext(BinaryContext.class,0);
		}
		public OperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraSyntaxListener ) ((RelationalAlgebraSyntaxListener)listener).enterOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraSyntaxListener ) ((RelationalAlgebraSyntaxListener)listener).exitOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationalAlgebraSyntaxVisitor ) return ((RelationalAlgebraSyntaxVisitor<? extends T>)visitor).visitOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperatorContext operator() throws RecognitionException {
		OperatorContext _localctx = new OperatorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_operator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case T__6:
			case T__7:
				{
				setState(71);
				((OperatorContext)_localctx).e1 = unary();
				((OperatorContext)_localctx).value =  ((OperatorContext)_localctx).e1.value;
				}
				break;
			case T__0:
				{
				setState(74);
				((OperatorContext)_localctx).e2 = binary();
				((OperatorContext)_localctx).value =  ((OperatorContext)_localctx).e2.value;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnaryContext extends ParserRuleContext {
		public Expression value;
		public SelectionContext sel;
		public ExpressionContext expr;
		public ProjectionContext proj;
		public RenamingContext ren;
		public SelectionContext selection() {
			return getRuleContext(SelectionContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ProjectionContext projection() {
			return getRuleContext(ProjectionContext.class,0);
		}
		public RenamingContext renaming() {
			return getRuleContext(RenamingContext.class,0);
		}
		public UnaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraSyntaxListener ) ((RelationalAlgebraSyntaxListener)listener).enterUnary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraSyntaxListener ) ((RelationalAlgebraSyntaxListener)listener).exitUnary(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationalAlgebraSyntaxVisitor ) return ((RelationalAlgebraSyntaxVisitor<? extends T>)visitor).visitUnary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnaryContext unary() throws RecognitionException {
		UnaryContext _localctx = new UnaryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_unary);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				{
				setState(79);
				((UnaryContext)_localctx).sel = selection();
				setState(80);
				match(T__0);
				setState(81);
				((UnaryContext)_localctx).expr = expression();
				setState(82);
				match(T__1);
				((UnaryContext)_localctx).sel.value.setExpression(((UnaryContext)_localctx).expr.value);
				}
				break;
			case T__6:
				{
				setState(85);
				((UnaryContext)_localctx).proj = projection();
				setState(86);
				match(T__0);
				setState(87);
				((UnaryContext)_localctx).expr = expression();
				setState(88);
				match(T__1);
				((UnaryContext)_localctx).proj.value.setExpression(((UnaryContext)_localctx).expr.value);
				}
				break;
			case T__7:
				{
				setState(91);
				((UnaryContext)_localctx).ren = renaming();
				setState(92);
				match(T__0);
				setState(93);
				((UnaryContext)_localctx).expr = expression();
				setState(94);
				match(T__1);
				((UnaryContext)_localctx).ren.value.setExpression(((UnaryContext)_localctx).expr.value);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectionContext extends ParserRuleContext {
		public Selection value;
		public AttributeContext v1;
		public DateContext v2;
		public LiteralContext v3;
		public NumberContext v4;
		public ComparisonOperatorContext op;
		public AttributeContext w1;
		public DateContext w2;
		public LiteralContext w3;
		public NumberContext w4;
		public AttributeContext x1;
		public DateContext x2;
		public LiteralContext x3;
		public NumberContext x4;
		public AttributeContext y1;
		public DateContext y2;
		public LiteralContext y3;
		public NumberContext y4;
		public List<ComparisonOperatorContext> comparisonOperator() {
			return getRuleContexts(ComparisonOperatorContext.class);
		}
		public ComparisonOperatorContext comparisonOperator(int i) {
			return getRuleContext(ComparisonOperatorContext.class,i);
		}
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<DateContext> date() {
			return getRuleContexts(DateContext.class);
		}
		public DateContext date(int i) {
			return getRuleContext(DateContext.class,i);
		}
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public List<NumberContext> number() {
			return getRuleContexts(NumberContext.class);
		}
		public NumberContext number(int i) {
			return getRuleContext(NumberContext.class,i);
		}
		public SelectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraSyntaxListener ) ((RelationalAlgebraSyntaxListener)listener).enterSelection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraSyntaxListener ) ((RelationalAlgebraSyntaxListener)listener).exitSelection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RelationalAlgebraSyntaxVisitor ) return ((RelationalAlgebraSyntaxVisitor<? extends T>)visitor).visitSelection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectionContext selection() throws RecognitionException {
		SelectionContext _localctx = new SelectionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_selection);

		        ((SelectionContext)_localctx).value =  new Selection();
		        Comparison comp = new Comparison();
		    
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(T__2);
			setState(100);
			match(T__3);
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(101);
				((SelectionContext)_localctx).v1 = attribute();

				            comp.setLeftValue(((SelectionContext)_localctx).v1.value);
				            comp.setLeftValueType(ComparisonValueType.ATTRIBUTE);
				        
				}
				break;
			case 2:
				{
				setState(104);
				((SelectionContext)_localctx).v2 = date();

				            comp.setLeftValue(((SelectionContext)_localctx).v2.value);
				            comp.setLeftValueType(ComparisonValueType.DATE);
				        
				}
				break;
			case 3:
				{
				setState(107);
				((SelectionContext)_localctx).v3 = literal();

				            comp.setLeftValue(((SelectionContext)_localctx).v3.value);
				            comp.setLeftValueType(ComparisonValueType.LITERAL);
				        
				}
				break;
			case 4:
				{
				setState(110);
				((SelectionContext)_localctx).v4 = number();

				            comp.setLeftValue(((SelectionContext)_localctx).v4.value);
				            comp.setLeftValueType(ComparisonValueType.NUMBER);
				        
				}
				break;
			}
			setState(115);
			((SelectionContext)_localctx).op = comparisonOperator();
			comp.setOperator(((SelectionContext)_localctx).op.value);
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(117);
				((SelectionContext)_localctx).w1 = attribute();

				            comp.setRightValue(((SelectionContext)_localctx).w1.value);
				            comp.setRightValueType(ComparisonValueType.ATTRIBUTE);
				        
				}
				break;
			case 2:
				{
				setState(120);
				((SelectionContext)_localctx).w2 = date();

				            comp.setRightValue(((SelectionContext)_localctx).w2.value);
				            comp.setRightValueType(ComparisonValueType.DATE);
				        
				}
				break;
			case 3:
				{
				setState(123);
				((SelectionContext)_localctx).w3 = literal();

				            comp.setRightValue(((SelectionContext)_localctx).w3.value);
				            comp.setRightValueType(ComparisonValueType.LITERAL);
				        
				}
				break;
			case 4:
				{
				setState(126);
				((SelectionContext)_localctx).w4 = number();

				            comp.setRightValue(((SelectionContext)_localctx).w4.value);
				            comp.setRightValueType(ComparisonValueType.NUMBER);
				        
				}
				break;
			}
			_localctx.value.addComparison(comp);
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(132);
				match(T__4);
				comp = new Comparison();
				setState(146);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(134);
					((SelectionContext)_localctx).x1 = attribute();

					                comp.setLeftValue(((SelectionContext)_localctx).x1.value);
					                comp.setLeftValueType(ComparisonValueType.ATTRIBUTE);
					            
					}
					break;
				case 2:
					{
					setState(137);
					((SelectionContext)_localctx).x2 = date();

					                comp.setLeftValue(((SelectionContext)_localctx).x2.value);
					                comp.setLeftValueType(ComparisonValueType.DATE);
					            
					}
					break;
				case 3:
					{
					setState(140);
					((SelectionContext)_localctx).x3 = literal();

					                comp.setLeftValue(((SelectionContext)_localctx).x3.value);
					                comp.setLeftValueType(ComparisonValueType.LITERAL);
					            
					}
					break;
				case 4:
					{
					setState(143);
					((SelectionContext)_localctx).x4 = number();

					                comp.setLeftValue(((SelectionContext)_localctx).x4.value);
					                comp.setLeftValueType(ComparisonValueType.NUMBER);
					            
					}
					break;
				}
				setState(148);
				((SelectionContext)_localctx).op = comparisonOperator();
				comp.setOperator(((SelectionContext)_localctx).op.value);
				setState(162);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(150);
					((SelectionContext)_localctx).y1 = attribute();

					                comp.setRightValue(((SelectionContext)_localctx).y1.value);
					                comp.setRightValueType(ComparisonValueType.ATTRIBUTE);
					            
					}
					break;
				case 2:
					{
					setState(153);
					((SelectionContext)_localctx).y2 = date();

					                comp.setRightValue(((SelectionContext)_localctx).y2.value);
					                comp.setRightValueType(ComparisonValueType.DATE);
					            
					}
					break;
				case 3:
					{
					setState(156);
					((SelectionContext)_localctx).y3 = literal();

					                comp.setRightValue(((SelectionContext)_localctx).y3.value);
					                comp.setRightValueType(ComparisonValueType.LITERAL);
					            
					}
					break;
				case 4:
					{
					setState(159);
					((SelectionContext)_localctx).y4 = number();

					                comp.setRightValue(((SelectionContext)_localctx).y4.value);
					                comp.setRightValueType(ComparisonValueType.NUMBER);
					            
					}
					break;
				}
				_localctx.value.addComparison(comp);
				}
				}
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(171);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
